{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 36,
  "lineage": "09b118a6-d76d-746e-3a91-deefa05b0ebe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ba458d3a7520e7e",
            "domain": "vpc",
            "id": "eipalloc-01ba458d3a7520e7e",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-170-94-198.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.94.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod-ec2-jumphost-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06672d07f62285d1d",
            "arn": "arn:aws:ec2:eu-west-2:936605217917:instance/i-062e7ecf92d8b08cf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062e7ecf92d8b08cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-dec",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0553c6645676f2165",
            "private_dns": "ip-10-0-3-120.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.120",
            "public_ip": "13.40.43.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b5d6550e9d9824ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-003441709b5e28b11"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4789f43be86fe6c",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-003441709b5e28b11"
            ]
          },
          "dependencies": [
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod-ec2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06672d07f62285d1d",
            "arn": "arn:aws:ec2:eu-west-2:936605217917:instance/i-05ee7bb337efe6087",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ee7bb337efe6087",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-dec",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-055e1b64e18bad696",
            "private_dns": "ip-10-0-141-63.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.141.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0103beba3f7ba8d24",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c304eb980a9f68e0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c2577c7bb0110a8",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c304eb980a9f68e0"
            ]
          },
          "dependencies": [
            "aws_security_group.prod_alb_private_sg",
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-private",
            "aws_vpc.prod-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06672d07f62285d1d",
            "arn": "arn:aws:ec2:eu-west-2:936605217917:instance/i-01791479527b90384",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01791479527b90384",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-dec",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e92872666d014d3",
            "private_dns": "ip-10-0-149-76.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.149.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd335d64ce050d2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c304eb980a9f68e0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2e9752399cf1335",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c304eb980a9f68e0"
            ]
          },
          "dependencies": [
            "aws_security_group.prod_alb_private_sg",
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-private",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:internet-gateway/igw-0474cb5dd6167345c",
            "id": "igw-0474cb5dd6167345c",
            "owner_id": "936605217917",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod-alb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:loadbalancer/app/prod-alb-private/bb3b284d22d61ab2",
            "arn_suffix": "app/prod-alb-private/bb3b284d22d61ab2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-prod-alb-private-400253513.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:loadbalancer/app/prod-alb-private/bb3b284d22d61ab2",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-alb-private",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c304eb980a9f68e0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06c2577c7bb0110a8"
              },
              {
                "subnet_id": "subnet-0a2e9752399cf1335"
              }
            ],
            "subnets": [
              "subnet-06c2577c7bb0110a8",
              "subnet-0a2e9752399cf1335"
            ],
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "vpc_id": "vpc-09b9f28a22cdd162c",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.prod_alb_private_sg",
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-private",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod-alb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:loadbalancer/app/prod-alb-public/bda6acb9053912b9",
            "arn_suffix": "app/prod-alb-public/bda6acb9053912b9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-alb-public-1505984204.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:loadbalancer/app/prod-alb-public/bda6acb9053912b9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-alb-public",
            "preserve_host_header": false,
            "security_groups": [
              "sg-003441709b5e28b11"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c4789f43be86fe6c"
              },
              {
                "subnet_id": "subnet-0f1edfb5266c92e4e"
              }
            ],
            "subnets": [
              "subnet-0c4789f43be86fe6c",
              "subnet-0f1edfb5266c92e4e"
            ],
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "vpc_id": "vpc-09b9f28a22cdd162c",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod-alb-private-lsitener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:listener/app/prod-alb-private/bb3b284d22d61ab2/1dd0bc70ae475600",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-private-tg/00ce3873e5fe43ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:listener/app/prod-alb-private/bb3b284d22d61ab2/1dd0bc70ae475600",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:loadbalancer/app/prod-alb-private/bb3b284d22d61ab2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.prod-alb-private",
            "aws_lb_target_group.prod-alb-private-tg",
            "aws_security_group.prod_alb_private_sg",
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-private",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod-alb-public-lsitener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:listener/app/prod-alb-public/bda6acb9053912b9/8a013db73daeff21",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-public-tg/55581bd1bb276f5b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:listener/app/prod-alb-public/bda6acb9053912b9/8a013db73daeff21",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:loadbalancer/app/prod-alb-public/bda6acb9053912b9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.prod-alb-public",
            "aws_lb_target_group.prod-alb-public-tg",
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prod-alb-private-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-private-tg/00ce3873e5fe43ea",
            "arn_suffix": "targetgroup/prod-alb-private-tg/00ce3873e5fe43ea",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-private-tg/00ce3873e5fe43ea",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-alb-private-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prod-alb-public-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-public-tg/55581bd1bb276f5b",
            "arn_suffix": "targetgroup/prod-alb-public-tg/55581bd1bb276f5b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-public-tg/55581bd1bb276f5b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-alb-public-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "prod-alb-private-tg-registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-private-tg/00ce3873e5fe43ea-20230826160126642400000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-private-tg/00ce3873e5fe43ea",
            "target_id": "i-05ee7bb337efe6087"
          },
          "dependencies": [
            "aws_instance.prod-ec2-private",
            "aws_lb_target_group.prod-alb-private-tg",
            "aws_security_group.prod_alb_private_sg",
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-private",
            "aws_vpc.prod-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-private-tg/00ce3873e5fe43ea-20230826160126573900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-private-tg/00ce3873e5fe43ea",
            "target_id": "i-01791479527b90384"
          },
          "dependencies": [
            "aws_instance.prod-ec2-private",
            "aws_lb_target_group.prod-alb-private-tg",
            "aws_security_group.prod_alb_private_sg",
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-private",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "prod-alb-public-tg-registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-public-tg/55581bd1bb276f5b-20230826160126578300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-public-tg/55581bd1bb276f5b",
            "target_id": "i-05ee7bb337efe6087"
          },
          "dependencies": [
            "aws_instance.prod-ec2-private",
            "aws_lb_target_group.prod-alb-public-tg",
            "aws_security_group.prod_alb_private_sg",
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-private",
            "aws_vpc.prod-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-public-tg/55581bd1bb276f5b-20230826160126688000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:936605217917:targetgroup/prod-alb-public-tg/55581bd1bb276f5b",
            "target_id": "i-01791479527b90384"
          },
          "dependencies": [
            "aws_instance.prod-ec2-private",
            "aws_lb_target_group.prod-alb-public-tg",
            "aws_security_group.prod_alb_private_sg",
            "aws_security_group.prod_alb_pub_sg",
            "aws_subnet.prod-subnet-private",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ba458d3a7520e7e",
            "connectivity_type": "public",
            "id": "nat-0322b7fd307863655",
            "network_interface_id": "eni-0eb90a5a352b6a02d",
            "private_ip": "10.0.3.220",
            "public_ip": "18.170.94.198",
            "subnet_id": "subnet-0c4789f43be86fe6c",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            }
          },
          "dependencies": [
            "aws_eip.prod-eip",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:route-table/rtb-032b3e625e91cdc2b",
            "id": "rtb-032b3e625e91cdc2b",
            "owner_id": "936605217917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0322b7fd307863655",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prod-eip",
            "aws_nat_gateway.prod-natgw",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:route-table/rtb-0451fd011226b7b2f",
            "id": "rtb-0451fd011226b7b2f",
            "owner_id": "936605217917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0474cb5dd6167345c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09084b799f801ddeb",
            "route_table_id": "rtb-032b3e625e91cdc2b",
            "subnet_id": "subnet-06c2577c7bb0110a8"
          },
          "dependencies": [
            "aws_eip.prod-eip",
            "aws_nat_gateway.prod-natgw",
            "aws_route_table.prod-rt-private",
            "aws_subnet.prod-subnet-private",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd086ad918f44d80",
            "route_table_id": "rtb-032b3e625e91cdc2b",
            "subnet_id": "subnet-0a2e9752399cf1335"
          },
          "dependencies": [
            "aws_eip.prod-eip",
            "aws_nat_gateway.prod-natgw",
            "aws_route_table.prod-rt-private",
            "aws_subnet.prod-subnet-private",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeaa3abec660e982",
            "route_table_id": "rtb-032b3e625e91cdc2b",
            "subnet_id": "subnet-0695711b5bdd8a7a3"
          },
          "dependencies": [
            "aws_eip.prod-eip",
            "aws_nat_gateway.prod-natgw",
            "aws_route_table.prod-rt-private",
            "aws_subnet.prod-subnet-private",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb2a245cab195e29",
            "route_table_id": "rtb-032b3e625e91cdc2b",
            "subnet_id": "subnet-031a5da2ed9a03a5b"
          },
          "dependencies": [
            "aws_eip.prod-eip",
            "aws_nat_gateway.prod-natgw",
            "aws_route_table.prod-rt-private",
            "aws_subnet.prod-subnet-private",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057aa0bb8c6982061",
            "route_table_id": "rtb-0451fd011226b7b2f",
            "subnet_id": "subnet-0c4789f43be86fe6c"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-rt-public",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4e574a6e5e8e063",
            "route_table_id": "rtb-0451fd011226b7b2f",
            "subnet_id": "subnet-0f1edfb5266c92e4e"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-rt-public",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_alb_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:security-group/sg-0c304eb980a9f68e0",
            "description": "ALB SG - Internal LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c304eb980a9f68e0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003441709b5e28b11"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003441709b5e28b11"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003441709b5e28b11"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod_alb_private_sg",
            "name_prefix": "",
            "owner_id": "936605217917",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.prod_alb_pub_sg",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_alb_pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:security-group/sg-003441709b5e28b11",
            "description": "ALB SG - Internet Facing",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003441709b5e28b11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod_alb_pub_sg",
            "name_prefix": "",
            "owner_id": "936605217917",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:subnet/subnet-06c2577c7bb0110a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c2577c7bb0110a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936605217917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:subnet/subnet-0a2e9752399cf1335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2e9752399cf1335",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936605217917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:subnet/subnet-0695711b5bdd8a7a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0695711b5bdd8a7a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936605217917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:subnet/subnet-031a5da2ed9a03a5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.176.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031a5da2ed9a03a5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936605217917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:subnet/subnet-0c4789f43be86fe6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4789f43be86fe6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "936605217917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "dependencies": [
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:subnet/subnet-0f1edfb5266c92e4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1edfb5266c92e4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "936605217917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            },
            "vpc_id": "vpc-09b9f28a22cdd162c"
          },
          "dependencies": [
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.prod-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:936605217917:vpc/vpc-09b9f28a22cdd162c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b5c79089d2c3ceb",
            "default_route_table_id": "rtb-07aa6e6177b81e814",
            "default_security_group_id": "sg-07874c350268426db",
            "dhcp_options_id": "dopt-0822881305c344970",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09b9f28a22cdd162c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07aa6e6177b81e814",
            "owner_id": "936605217917",
            "tags": {
              "env": "dissertation"
            },
            "tags_all": {
              "env": "dissertation"
            }
          }
        }
      ]
    }
  ]
}